--- a/KB.WebApi/article2.html
+++ b/KB.WebApi/article2.html
@@ -43,5 +43,9 @@
     <span>
         {{Comp.Child.Name}}
     </span>
+
+    <div>
+        {{#CustomTag 'This is a custom tag.'}}
+    </div>
 </body>
 </html>
